app.json update

--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
   "env": {
   },
   "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "standard-1x"
+    }
   },
   "addons": [
     "heroku-postgresql"
@@ -14,5 +18,12 @@
     {
       "url": "heroku/ruby"
     }
-  ]
+  ],
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "bundle exec rake spec"
+      }
+    }
+  }
 }
