--- a/app.json
+++ b/app.json
@@ -17,5 +17,12 @@
     {
       "url": "heroku/ruby"
     }
-  ]
+  ],
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "bundle exec rake spec"
+      }
+    }
+  }
 }
